--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "RAW CELL\n",
+    "RAW CELL - I can change it\n",
     "\n",
     "This Cell is a 'Raw' Cell - it's just boring text."
    ]
@@ -76,7 +76,7 @@
    "source": [
     "#### Executing Cells\n",
     "\n",
-    "Both *markdown* and *code* cells can be excuted,\n",
+    "# Both *markdown* and *code* cells can be excuted,\n",
     "\n",
     "Excuting a *markdown* causes the *formatted* version of the cell to be displayed.  Excuting a *code* cell causes the code to run and any results are displayed below the cell.\n",
     "\n",
@@ -105,10 +105,21 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "see if you can delete this cell - tip, checkout the *Edit* menu ... or even try right-click\n",
-    "\n"
+    "Added with a for above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Big Heading "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Added with b for below"
    ]
   },
   {
@@ -132,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "23"
       ]
      },
      "execution_count": 1,
@@ -141,7 +152,7 @@
     }
    ],
    "source": [
-    "1 + 2 + 3 + 4"
+    "1 + 2 + 3 + 17"
    ]
   },
   {
