--- a/lessons/python/ep1-introduction.ipynb
+++ b/lessons/python/ep1-introduction.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "23"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,10 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "weight_kg = 60"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,10 +112,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weight_kg + 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(weight_kg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,10 +178,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "weight_kg = 60.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(weight_kg))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,10 +221,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "weight_kg_text = \"weight in kilograms:\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -188,10 +241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight in kilograms: 60.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(weight_kg_text, weight_kg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -206,10 +269,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight in pounds: 132.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"weight in pounds:\", 2.2 * weight_kg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -224,10 +297,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(weight_kg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -243,10 +326,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight in kilograms is now: 65.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight_kg = 65.0\n",
+    "print(\"weight in kilograms is now:\", weight_kg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -267,10 +361,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight in kilograms: 65.0 and in pounds: 143.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# There are 2.2 pounds per kilogram\n",
+    "weight_lb = 2.2 * weight_kg\n",
+    "print(weight_kg_text, weight_kg, \"and in pounds:\", weight_lb)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -288,10 +394,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight in kilograms is now: 100.0 and weight in pounds is still: 143.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight_kg = 100.0\n",
+    "print(\"weight in kilograms is now:\", weight_kg, \"and weight in pounds is still:\", weight_lb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight_lb: 50.0\n",
+      "weight_lb: 200.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight_lb = 50.0\n",
+    "print(\"weight_lb:\", weight_lb)\n",
+    "weight_lb = weight_kg * 2\n",
+    "print(\"weight_lb:\", weight_lb)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -326,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,10 +503,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 1., ..., 3., 0., 0.],\n",
+       "       [0., 1., 2., ..., 1., 0., 1.],\n",
+       "       [0., 1., 1., ..., 2., 1., 1.],\n",
+       "       ...,\n",
+       "       [0., 1., 1., ..., 1., 1., 1.],\n",
+       "       [0., 0., 0., ..., 0., 2., 0.],\n",
+       "       [0., 0., 1., ..., 1., 1., 0.]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = numpy.loadtxt(fname=\"data/inflammation-01.csv\", delimiter=\",\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -383,9 +549,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 1. ... 3. 0. 0.]\n",
+      " [0. 1. 2. ... 1. 0. 1.]\n",
+      " [0. 1. 1. ... 2. 1. 1.]\n",
+      " ...\n",
+      " [0. 1. 1. ... 1. 1. 1.]\n",
+      " [0. 0. 0. ... 0. 2. 0.]\n",
+      " [0. 0. 1. ... 1. 1. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(data)"
    ]
@@ -399,6 +579,23 @@
     "```\n",
     "print(type(data))\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(data))"
    ]
   },
   {
@@ -418,10 +615,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.dtype)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -438,10 +645,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60, 40)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.shape)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -459,10 +676,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first value in the data: 0.0\n",
+      "middle value in data: 13.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"first value in the data:\", data[0,0])\n",
+    "print(\"middle value in data:\", data[30,20])"
+   ]
   },
   {
    "cell_type": "markdown",
